      objects into JSON. Receiving JS instances will automatically de-
      serialize the JSON added to messages this way.
    * New parameter methods for cmodules (python3, js, perl5 and cmodule)
      allowing messages content to be identified before being processed. The
      processor function receives a method name.
    * Support PATCH requests in httpclient and httpserver
 
  * Improvements:
    * Timeout changes in httpclient and rotate deferred to msgdb PUT
      messages to ensure all are attempted and not the same messages time out
      repeatedly.
    * In JS, refuse bare name module imports (require prefix like ./) and
      process relative paths correctly with respect to directory of importing
      script.
    * In httpclient, print stats about dropped messages in periodic function
      instead of once for every message.
    * Add warning when buffer entry count exceeds a certain configurable limit
    * Add statistics data for message broker costumer buffers

  * Fixes:
    * Raw data messages in JS module now working properly
    * Crash in JS module upon GC due to null pointer access

  * Under the hood:
    * Use events in file module
    * Common send loop for file and ip modules

 -- Atle Solbakken <atle@goliathdns.no>  Sat, 11 Feb 2023 08:30:08 +0100

rrr (1.27-1) bullseye; urgency=medium

  * Features:
    * New module to run JavaScript programs
    * New parameter in ip module to generate empty messages when new
      TCP connections are accepted.
    * New parameter in httpclient to disable HTTP/2 upgrade headers

  * Improvements:
    * Clarified inconsitency of manual with respect to configuration
      paramter mqtt_publish_rrr_message
    * Never send raw array data from mqttclient
    * Remove stale configuration cmodule parameters sleep_time_ms and
      nothing_happend_limit which had no effect when used.

  * Fixes:
    * Handling of websocket topic filters in httpserver