@@ -31,6 +31,7 @@ rrr (1.28-20) bullseye; urgency=medium
       allowing messages content to be identified before being processed. The
       processor function receives a method name.
     * Support PATCH requests in httpclient and httpserver
+    * New function console.assert in JS
  
   * Improvements:
     * Timeout changes in httpclient and rotate deferred to msgdb PUT
